horizontal scroll is fixed

--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -2,6 +2,7 @@
   max-width: 1020px;
   padding: 0 20px;
   margin: 0 auto;
+  overflow: hidden;
   @include transition-basic (padding);
 
   @include tablet-size {
